# vsdview

./: .gitignore  CHANGELOG.md  README.md  po4a.cfg  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  build-windows.yml  transifex-sync.yml
.tx/: config
data/: org.nylander.vsdview.desktop  org.nylander.vsdview.metainfo.xml  se.danielnylander.vsdview.desktop  se.danielnylander.vsdview.metainfo.xml  se.danielnylander.vsdview.mime.xml
debian/: changelog  control  copyright  files  rules  vsdview.manpages  watch
debian/upstream/: metadata
debian/vsdview/DEBIAN/: control  md5sums
debian/vsdview/usr/lib/python3/dist-packages/vsdview/: __init__.py  converter.py  window.py
man/: vsdview.1
po/: README.md  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  it.mo  it.po  ja.mo  ja.po  ko.mo  ko.po  nl.mo  nl.po  pl.mo  pl.po  pt_BR.mo  pt_BR.po  sv.mo  sv.po  vsdview-man.pot  vsdview.pot  zh_CN.mo  zh_CN.po
po/locale/sv/LC_MESSAGES/: vsdview.mo
rpm/: vsdview.spec
vsdview/: __init__.py  __main__.py  app.py  converter.py  converter.py.backup  converter.py.bak  recent.py  window.py
vsdview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
